// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button render default slot 1`] = `
<button class="van-button van-button--default van-button--large van-goods-action-button van-goods-action-button--first van-goods-action-button--last">
  <div class="van-button__content"><span class="van-button__text">Default Content</span></div>
</button>
`;

exports[`Icon render default slot 1`] = `
<div role="button" tabindex="0" class="van-goods-action-icon">
  <div class="van-icon van-icon-undefined van-goods-action-icon__icon">
    <!---->
  </div>Default Content
</div>
`;

exports[`Icon render icon slot 1`] = `
<div role="button" tabindex="0" class="van-goods-action-icon">
  <div class="van-goods-action-icon__icon">Custom Icon
    <!---->
  </div>Text
</div>
`;

exports[`Icon render icon slot with badge 1`] = `
<div role="button" tabindex="0" class="van-goods-action-icon">
  <div class="van-goods-action-icon__icon">Custom Icon<div class="van-info">1</div>
  </div>Text
</div>
`;

exports[`Icon render icon slot with dot 1`] = `
<div role="button" tabindex="0" class="van-goods-action-icon">
  <div class="van-goods-action-icon__icon">Custom Icon<div class="van-info van-info--dot"></div>
  </div>Text
</div>
`;

exports[`disable safe-area-inset-bottom prop 1`] = `<div class="van-goods-action van-goods-action--unfit"></div>`;
